WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263600
[css-grid] GridBaselineAlignment::ascentForChild does not compute central baseline correctly for column axis
https://bugs.webkit.org/show_bug.cgi?id=263600
Summary
[css-grid] GridBaselineAlignment::ascentForChild does not compute central bas...
Sammy Gill
Reported
2023-10-24 10:38:14 PDT
https://drafts.csswg.org/css-align-3/#baseline-export
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-24 10:40:12 PDT
<
rdar://problem/117424263
>
Sammy Gill
Comment 2
2023-10-24 11:46:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19501
EWS
Comment 3
2023-10-27 10:24:54 PDT
Committed
269857@main
(2688e1f33c19): <
https://commits.webkit.org/269857@main
> Reviewed commits have been landed. Closing PR #19501 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug